<resources>
    <string name="app_name" translatable="false">My Quotations</string>
    <string name="button_getQuotations">Get quotations</string>
    <string name="button_favouriteQuotations">Favourite quotations</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="topBar_myQuotations">My Quotations</string>
    <string name="topBar_randomQuotations">Random quotations</string>
    <string name="topBar_favouriteQuotations">Favourite quotations</string>
    <string name="topBar_settings">Settings</string>
    <string name="topBar_about">About</string>
    <string name="textView_about">\"My Quotations\" by\nAlejandro Carrión\nalcarsa5\n© DADM 2021</string>
    <string name="imageView_developer">An image of the developer</string>
    <string name="editText_insertName">Insert your name</string>
    <string name="textView_refreshQuotation">Hello %1s! Press \"Refresh\" to get a new quotation</string>
    <string name="textView_noUserName">Nameless one</string>
    <string name="toast_noAuthor">It is not possible to obtain the author information</string>
    <string name="url_wikipedia">https://en.wikipedia.org/wiki/Special:Search?search=</string>
    <string name="dialog_deleteQuotation">Are you sure you want to delete this quotation?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="menu_add">Add</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_deleteAll">Clear all</string>
    <string name="dialog_deleteAllQuotations">Are you sure you want to delete ALL your favourite quotations?</string>
    <string name="textView_errorQuotationText">There was a problem connecting to the quotations web service</string>
    <string name="textView_errorQuotationAuthor">The system</string>
    <string name="settingsCategoryTitle_webService">Web service</string>
    <string name="settingsCategoryTitle_database">Database</string>
    <string name="settingsKey_userName" translatable="false">userName</string>
    <string name="settingsKey_quotationsLanguage" translatable="false">quotationsLanguage</string>
    <string name="settingsKey_httpMethod" translatable="false">httpMethod</string>
    <string name="settingsKey_databaseAccess" translatable="false">databaseAccess</string>
    <string name="settingsTitle_userName">User name</string>
    <string name="settingsTitle_quotationsLanguage">Quotations language</string>
    <string name="settingsTitle_httpMethod">HTTP Method</string>
    <string name="settingsTitle_databaseAccess">Database access</string>
    <string name="settingsSummary_quotationsLanguage">Quotations will be received in the selected language</string>
    <string name="settingsSummary_httpMethod">Web requests will be performed using the selected HTTP method</string>
    <string name="settingsSummary_nameIdentification">Name that identifies the user</string>
    <string name="settingsSummary_databaseAccess">Method that will be used to connect to the database</string>
    <string name="settingsOption_getHttpMethod" translatable="false">GET</string>
    <string name="settingsOption_getHttpMethod_internal" translatable="false">@string/settingsOption_getHttpMethod</string>
    <string name="settingsOption_postHttpMethod" translatable="false">POST</string>
    <string name="settingsOption_postHttpMethod_internal" translatable="false">@string/settingsOption_postHttpMethod</string>
    <string name="settingsOption_englishQuotationsLanguage">English</string>
    <string name="settingsOption_englishQuotationsLanguage_internal" translatable="false">en</string>
    <string name="settingsOption_russianQuotationsLanguage">Russian</string>
    <string name="settingsOption_russianQuotationsLanguage_internal" translatable="false">ru</string>
    <string name="settingsOption_roomDatabaseAccess" translatable="false">Room</string>
    <string name="settingsOption_roomDatabaseAccess_internal" translatable="false">@string/settingsOption_roomDatabaseAccess</string>
    <string name="settingsOption_sqLiteDatabaseAccess" translatable="false">SQLiteOpenHelper</string>
    <string name="settingsOption_sqLiteDatabaseAccess_internal" translatable="false">@string/settingsOption_sqLiteDatabaseAccess</string>
</resources>
